css/styles.css
/* ... */
main #bookcase-empty:hover::after {
  opacity: 1;
}

main #bookcase-empty:hover p:first-of-type {
  opacity: 0;
  transform: scale(0);
  visibility: hidden;
}

main #bookcase-empty:hover p:nth-of-type(2) {
  opacity: 0.7;
  transform: scale(1);
  visibility: visible;
}

main #bookcase-empty::before {
  background: linear-gradient(to bottom right, cornsilk, #724b3f, black);
  opacity: 0;
  border-radius: inherit;
  content: '';
  position: absolute;
  inset: 0;
  transition: all 222ms ease-in-out;
  z-index: -1;
}

main #bookcase-empty::after {
  border-radius: inherit;
  box-shadow: inset 0 0 10px #724b3f;
  content: '';
  inset: 0;
  opacity: 0;
  position: absolute;
  transition: all 222ms ease-in-out;
  z-index: -1;
}

main #bookcase-empty p {
  grid-area: paragraph;
  opacity: 0.7;
  transition: all 222ms ease-in-out;
}

main #bookcase-empty p:nth-of-type(2) {
  font-size: 3rem;
  opacity: 0;
  transform: scale(0);
  visibility: hidden;
}

main #bookcase-empty p:nth-of-type(2):hover {
  opacity: 1;
  transform: scale(1.3);
}

main #bookcase-empty #bookcase-empty-periods {
  font-size: 1.313rem;

}

main #bookcase-empty .add-symbol {
  font-size: 2rem;
  vertical-align: 5px;
  /* text-shadow: 0 0 3px #724b3f; */
}

main #bookcase .book-card {
  /* border: 2px solid #724b3f; */
  background: linear-gradient(145deg, #ffffeb, #e6dfc6);
  border-radius: 25px;
  box-shadow:  5px 5px 12px #a8a491,
              -5px -5px 12px #ffffff;
  display: flex;
  flex-direction: column;
  gap: 15px;
  justify-content: center;
  min-width: 275px;
  padding: 15px 25px;
}

main #bookcase .book-card .book-info {
  font-weight: bold;
  position: relative;
  transition: all 380ms ease-in-out;
  z-index: 1;
}

main #bookcase .book-card .book-info[contenteditable='true'] {
  display: inline-block;
  background-color: white;
  border-radius: 25px;
  box-shadow: inset 6px 6px 12px #dbd5bd, inset -6px -6px 12px #fffffb;
  font-style: normal;
  font-weight: normal;
  padding: 8px 25px;
}

main #bookcase .description-wrapper {
  display: grid;
  grid-template-columns: 1fr 2fr;
  margin-bottom: 10px;
}

main #bookcase .description-wrapper .bookcase-cover-img-wrapper {
  border: 2px solid #724b3f;
  border-radius: 15px;
}

main #bookcase .description-wrapper .bookcase-cover-img {
  border-radius: inherit;
}

main #bookcase .description-wrapper .bookcase-title {
  font-size: 1.125rem;
}

main #bookcase .description-wrapper .bookcase-author-name {
  font-style: italic;
}

main #bookcase .description-list {
  align-items: right;
  display: flex;
  flex-direction: column;
  gap: 10px;
  justify-content: right;
  position: relative;
  transition: all 380ms ease-in-out;
  width: 100%;
} 

main #bookcase .description-list:has(.book-info[contenteditable='true']) {
  gap: 15px;
}

main #bookcase .description-term {
  font-family: 'Cyclone', monospace;
  font-size: 1.688rem;
  line-height: 1;
  padding-bottom: 3px;
}


/* ! fix */
main #bookcase .description {
  text-align: right;
  overflow: hidden;
}

main #bookcase .book-card .bottom-book-card-div {
  display: grid;
  column-gap: 25px;
  row-gap: 8px;
  grid-template-areas:  'unreadBtn removeBtn'
                        'editBtn dateAdded';
}

main #bookcase .book-card .book-card-btn {
  background-color: #724b3f;
  border: 2px solid black;
  border-radius: 25px;
  color: cornsilk;
  cursor: pointer;
  padding: 5px 15px;
}

main #bookcase .book-card .book-card-btn:first-of-type {
  grid-area: unreadBtn;
}

main #bookcase .book-card .book-card-btn:nth-of-type(2) {
  grid-area: removeBtn;
}

main #bookcase .book-card .book-card-btn:nth-of-type(3) {
  background-color: unset;
  border: unset;
  color: var(--color-secondary);
  text-decoration: underline;
  font-size: 0.75rem;
  grid-area: editBtn;
  justify-self: start;
  padding: 0;
} 

main #bookcase .book-card .date-added-div {
  grid-area: dateAdded;
  justify-self: end;
  text-align: right;
  font-size: 0.75rem;
}

aside section {
  border-radius: 55px;
  box-shadow:  7px 7px 11px #dbd5bd,
              -7px -7px 11px #fffffb;
  margin-bottom: 25px;
  padding: 20px 30px;
  position: relative;
}

aside section:hover h3::before {
  transform: scaleX(0.5);
}

aside section h3 {
  /* border: 2px solid red; */
  margin-bottom: 15px;
  padding-bottom: 3px;
  position: relative;
  /* text-align: center; */
  z-index: 0;
}

aside section h3::before {
  content: '';
  bottom: 5px;
  border-radius:30%;
  left: -3px;
  height: 2px;
  position: absolute;
  background: linear-gradient(to left, transparent, var(--color-secondary));
  width: 100%;
  transform: scaleX(1);
  transform-origin: left;
  transition: all 380ms ease-in-out;
  z-index: -1;
} 

aside ul {
  display: flex;
  flex-direction: column;
  gap: 8px;
  list-style: none;
}

aside #notifications #notifications-list .notification-link {
  color: var(--color-secondary);
  align-items: top;
  display: flex;
  gap: 8px;
  text-decoration: none;
}

aside #advertisement-box video {
  border-radius: 25px;
  object-fit: contain;
}

aside #friends #friends-list .friends-list-li {
  align-items: top;
  display: flex;
  gap: 8px;
}

aside #trending #trending-list .trending-list-li a {
  align-items: center;
  display: flex;
  gap: 8px;
  text-decoration: none;
}

aside #socials {
  display: grid;
  grid-template-rows: auto 1fr;
}

aside #socials #socials-icons {
  align-self: center;
  background: #fff8dc;
  border-radius: 50px;
  box-shadow: inset 15px 15px 23px #c9c4ae,
            inset -15px -15px 23px #ffffff;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-items: center;
  padding-block: 25px;
}

aside #socials #socials-icons .socials-icon {
  align-items: center;
  background: linear-gradient(145deg, #ffffeb, #e6dfc6);
  border-radius: 50%;
  box-shadow:  6px 6px 10px #a8a491,
              -6px -6px 10px #ffffff;
  display: grid;
  height: 55px;
  justify-content: center;
  transition: all 380ms ease-in-out;
  width: 55px;
}
/* ... */

